--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,50 +24,31 @@
   /* gradient */
 
   --bg-gradient-onyx: linear-gradient(
-    to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
+    to bottom right,
+    hsl(240, 1%, 25%) 3%,
     hsl(0, 0%, 19%) 97%
   );
-  --bg-gradient-jet: linear-gradient(
-    to bottom right, 
-    hsla(240, 1%, 18%, 0.251) 0%, 
-    hsla(240, 2%, 11%, 0) 100%
-  ), hsl(240, 2%, 13%);
-  --bg-gradient-yellow-1: linear-gradient(
-    to bottom right, 
-    hsl(45, 100%, 71%) 0%, 
-    hsla(36, 100%, 69%, 0) 50%
-  );
-  --bg-gradient-yellow-2: linear-gradient(
-    135deg, 
-    hsla(45, 100%, 71%, 0.251) 0%, 
-    hsla(35, 100%, 68%, 0) 59.86%
-  ), hsl(240, 2%, 13%);
-  --border-gradient-onyx: linear-gradient(
-    to bottom right, 
-    hsl(0, 0%, 25%) 0%, 
-    hsla(0, 0%, 25%, 0) 50%
-  );
-  --text-gradient-yellow: linear-gradient(
-    to right, 
-    hsl(45, 100%, 72%), 
-    hsl(35, 100%, 68%)
-  );
+  --bg-gradient-jet: linear-gradient(to bottom right, #0e2f5641, #0e2f56),
+    #0a1f38;
+  --bg-gradient-yellow-1: linear-gradient(to bottom right, #ececda, #0e2e567e);
+  --bg-gradient-yellow-2: linear-gradient(135deg, #118df0, #0e2e56a8), #0e2f56;
+  --border-gradient-onyx: linear-gradient(to bottom right, #ff304f, #8f1f30);
+  --text-gradient-yellow: linear-gradient(to right, #efefe6, #e9e9c6);
 
   /* solid */
 
-  --jet: hsl(0, 0%, 22%);
-  --onyx: hsl(240, 1%, 17%);
-  --eerie-black-1: hsl(240, 2%, 13%);
-  --eerie-black-2: hsl(240, 2%, 12%);
-  --smoky-black: hsl(0, 0%, 7%);
+  --jet: #0e2f56;
+  --onyx: #0e2e56ba;
+  --eerie-black-1: #ff304f;
+  --eerie-black-2: #b3273c;
+  --smoky-black: #b63d51;
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
-  --vegas-gold: hsl(45, 54%, 58%);
-  --light-gray: hsl(0, 0%, 84%);
-  --light-gray-70: hsla(0, 0%, 84%, 0.7);
-  --bittersweet-shimmer: hsl(0, 43%, 51%);
+  --orange-yellow-crayola: #118df0;
+  --vegas-gold: #14558a;
+  --light-gray:  #ececda;
+  --light-gray-70: #ececdabc;
+  --bittersweet-shimmer: #d85a6d;
 
   /**
    * typography
