Changes to Info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
   --orange-yellow-crayola: #e6c17a;
-  --vegas-gold: #14558a;
+  --vegas-gold: #88bae3;
   --light-gray: #ececda;
   --light-gray-70: #ececdabc;
   --bittersweet-shimmer: #3e3b3b;
