--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,8 @@ article.active {
 }
 
 .h3 {
-  font-size: var(--fs-2);
+  font-size: 36px;
+  font-weight:bolder;
 }
 
 .h4 {
@@ -618,11 +619,11 @@ main {
 .testimonials-text {
   color: var(--light-gray);
   font-size: var(--fs-6);
-  font-weight: var(--fw-300);
-  line-height: 1.6;
+  font-weight:bold;
+  line-height: 2;
   display: -webkit-box;
-  line-clamp: 4;
-  -webkit-line-clamp: 4;
+  line-clamp: 5;
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
@@ -826,8 +827,9 @@ main {
 
 .timeline-item-title {
   font-size: var(--fs-6);
-  line-height: 1.3;
+  line-height: 1.8;
   margin-bottom: 7px;
+  font-weight: bold;
 }
 
 .timeline-list span {
