--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,6 @@ body {
   #REUSED STYLE
 \*-----------------------------------*/
 
-.sidebar,
 article {
   background: var(--eerie-black-2);
   border: 1px solid var(--jet);
@@ -159,6 +158,16 @@ article {
   box-shadow: var(--shadow-1);
   z-index: 1;
   min-height: 1000px;
+}
+
+.sidebar {
+  background: var(--eerie-black-2);
+  border: 1px solid var(--jet);
+  border-radius: 20px;
+  padding: 15px;
+  box-shadow: var(--shadow-1);
+  z-index: 1;
+  height: 700px !important;
 }
 
 .separator {
