changes to modal display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,42 +83,19 @@
   --transition-1: 0.25s ease;
   --transition-2: 0.5s ease-in-out;
 }
- 
-.portfolio-modal-close-btn { 
-  position: relative;
-  display:flex;
+
+.portfolio-modal-close-btn {
+  position: absolute;
+  right: 50%;
+  display: flex;
   width: 30px;
-  height: 30px; 
+  height: 30px;
   color: #ffffff;
   border: 2px solid #ffffff;
   text-align: center;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
-
-}
-
-.portfolio-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 10000; /* Sit on top */ 
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  width: 800px; /* Full width */
-  height: auto; /* Full height */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-}
-
-.portfolio-modal-content {
-  margin: 24px;
-}
-
-#portfolio-modal-image {
-  padding-top: 30px;
-  width: 100%;
 }
 
 /*-----------------------------------*\
@@ -1272,16 +1249,11 @@ textarea.form-input::-webkit-resizer {
 @media (max-width: 449px) {
   .portfolio-modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    position: fixed; /* Stay in place */ 
     z-index: 10000; /* Sit on top */
-    left: 50;
-    top: 50;
     overflow-x: scroll;
     overflow-y: scroll;
-    max-width: 449px; /* Full width */
+    width: 100%; /* Full width */
     height: auto; /* Full height */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   }
@@ -1291,22 +1263,17 @@ textarea.form-input::-webkit-resizer {
   }
 
   #portfolio-modal-image {
-    width: 600px;
+    width: 600px; 
   }
 }
 @media (min-width: 450px) {
   .portfolio-modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    position: fixed; /* Stay in place */ 
     z-index: 10000; /* Sit on top */
-    left: 50;
-    top: 50;
     overflow-x: scroll;
     overflow-y: scroll;
-    width: 450px; /* Full width */
+    width: 100%; /* Full width */
     height: auto; /* Full height */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   }
@@ -1337,16 +1304,11 @@ textarea.form-input::-webkit-resizer {
    */
   .portfolio-modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    position: fixed; /* Stay in place */ 
     z-index: 10000; /* Sit on top */
-    left: 50;
-    top: 50;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    width: 500px; /* Full width */
+    overflow-x: scroll;
+    overflow-y: scroll;
+    width: 100%; /* Full width */
     height: auto; /* Full height */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   }
@@ -1356,7 +1318,7 @@ textarea.form-input::-webkit-resizer {
   }
 
   #portfolio-modal-image {
-    width: 100%;
+    width: 700px;
   }
   :root {
     /**
@@ -1671,16 +1633,11 @@ textarea.form-input::-webkit-resizer {
    */
   .portfolio-modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    position: fixed; /* Stay in place */ 
     z-index: 10000; /* Sit on top */
-    left: 50;
-    top: 50;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    width: 600px; /* Full width */
+    overflow-x: scroll;
+    overflow-y: scroll;
+    width: 100%; /* Full width */
     height: auto; /* Full height */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   }
@@ -1690,7 +1647,7 @@ textarea.form-input::-webkit-resizer {
   }
 
   #portfolio-modal-image {
-    width: 100%;
+    width: 700px;
   }
 
   .sidebar,
@@ -1797,15 +1754,10 @@ textarea.form-input::-webkit-resizer {
   .portfolio-modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    text-align: center;
-    justify-content: center;
-    align-items: center;
     z-index: 10000; /* Sit on top */
-    left: 50;
-    top: 50;
     overflow-x: hidden;
     overflow-y: hidden;
-    width: 800px; /* Full width */
+    width: 900px; /* Full width */
     height: auto; /* Full height */
     background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   }
