--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,15 +2,13 @@
   #style.css
 \*-----------------------------------*/
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
- 
 
-:root { 
 
-  --bg-gradient-onyx: linear-gradient(
-    to bottom right,
-    hsl(240, 1%, 25%) 3%,
-    hsl(0, 0%, 19%) 97%
-  );
+:root {
+
+  --bg-gradient-onyx: linear-gradient(to bottom right,
+      hsl(240, 1%, 25%) 3%,
+      hsl(0, 0%, 19%) 97%);
   --bg-gradient-jet: linear-gradient(to bottom right, #0e2f5641, #0e2f56),
     #0a1f38;
   --bg-gradient-yellow-1: linear-gradient(to bottom right, #ececda, #0e2e567e);
@@ -85,6 +83,10 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.careerfoundry-image {
+  padding: 20px;
 }
 
 /*-----------------------------------*\
@@ -221,6 +223,7 @@ article.active {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -269,8 +272,10 @@ article.active {
 }
 
 .has-scrollbar::-webkit-scrollbar {
-  width: 5px; /* for vertical scrollbar */
-  height: 5px; /* for horizontal scrollbar */
+  width: 5px;
+  /* for vertical scrollbar */
+  height: 5px;
+  /* for horizontal scrollbar */
 }
 
 .has-scrollbar::-webkit-scrollbar-track {
@@ -745,7 +750,7 @@ main {
   box-shadow: var(--shadow-2);
 }
 
-.modal-img-wrapper > img {
+.modal-img-wrapper>img {
   display: none;
 }
 
@@ -970,7 +975,7 @@ main {
   transition: 0.15s ease-in-out;
 }
 
-.filter-select.active + .select-list {
+.filter-select.active+.select-list {
   opacity: 1;
   visibility: visible;
   pointer-events: all;
@@ -1011,12 +1016,13 @@ main {
   0% {
     transform: scale(0.5);
   }
+
   100% {
     transform: scale(1);
   }
 }
 
-.project-item > a {
+.project-item>a {
   width: 100%;
 }
 
@@ -1041,7 +1047,7 @@ main {
   transition: var(--transition-1);
 }
 
-.project-item > a:hover .project-img::before {
+.project-item>a:hover .project-img::before {
   background: hsla(0, 0%, 0%, 0.5);
 }
 
@@ -1062,7 +1068,7 @@ main {
   transition: var(--transition-1);
 }
 
-.project-item > a:hover .project-item-icon-box {
+.project-item>a:hover .project-item-icon-box {
   --scale: 1;
   opacity: 1;
 }
@@ -1078,7 +1084,7 @@ main {
   transition: var(--transition-1);
 }
 
-.project-item > a:hover img {
+.project-item>a:hover img {
   transform: scale(1.1);
 }
 
@@ -1236,35 +1242,25 @@ textarea.form-input::-webkit-resizer {
  * responsive larger than 450px screen
  */
 @media (max-width: 449px) {
-  .portfolio-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */ 
-    z-index: 10000; /* Sit on top */
-    overflow-x: scroll;
-    overflow-y: scroll;
-    width: 100%; /* Full width */
-    height: auto; /* Full height */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  .careerfoundry-image {
+    width: 300px;
   }
 
-  .portfolio-modal-content {
-    margin: 24px;
-  }
-
-  #portfolio-modal-image {
-    width: 600px; 
-  }
-}
-@media (min-width: 450px) {
   .portfolio-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */ 
-    z-index: 10000; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 10000;
+    /* Sit on top */
     overflow-x: scroll;
     overflow-y: scroll;
-    width: 100%; /* Full width */
-    height: auto; /* Full height */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: auto;
+    /* Full height */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
   }
 
   .portfolio-modal-content {
@@ -1274,6 +1270,38 @@ textarea.form-input::-webkit-resizer {
   #portfolio-modal-image {
     width: 600px;
   }
+}
+
+@media (min-width: 450px) {
+  .careerfoundry-image {
+    width: 340px;
+  }
+
+  .portfolio-modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 10000;
+    /* Sit on top */
+    overflow-x: scroll;
+    overflow-y: scroll;
+    width: 100%;
+    /* Full width */
+    height: auto;
+    /* Full height */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+  }
+
+  .portfolio-modal-content {
+    margin: 24px;
+  }
+
+  #portfolio-modal-image {
+    width: 600px;
+  }
+
   /**
    * client
    */
@@ -1288,18 +1316,28 @@ textarea.form-input::-webkit-resizer {
  */
 
 @media (min-width: 580px) {
+  .careerfoundry-image {
+    width: 340px;
+  }
+
   /**
    * CUSTOM PROPERTY
    */
   .portfolio-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */ 
-    z-index: 10000; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 10000;
+    /* Sit on top */
     overflow-x: scroll;
     overflow-y: scroll;
-    width: 100%; /* Full width */
-    height: auto; /* Full height */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: auto;
+    /* Full height */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
   }
 
   .portfolio-modal-content {
@@ -1309,6 +1347,7 @@ textarea.form-input::-webkit-resizer {
   #portfolio-modal-image {
     width: 700px;
   }
+
   :root {
     /**
      * typography
@@ -1535,7 +1574,7 @@ textarea.form-input::-webkit-resizer {
     width: 65px;
   }
 
-  .modal-img-wrapper > img {
+  .modal-img-wrapper>img {
     display: block;
     flex-grow: 1;
     width: 35px;
@@ -1617,18 +1656,28 @@ textarea.form-input::-webkit-resizer {
  */
 
 @media (min-width: 768px) {
+  .careerfoundry-image {
+    width: 400px;
+  }
+
   /**
    * REUSED STYLE
    */
   .portfolio-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */ 
-    z-index: 10000; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 10000;
+    /* Sit on top */
     overflow-x: scroll;
     overflow-y: scroll;
-    width: 100%; /* Full width */
-    height: auto; /* Full height */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: auto;
+    /* Full height */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
   }
 
   .portfolio-modal-content {
@@ -1740,15 +1789,25 @@ textarea.form-input::-webkit-resizer {
  */
 
 @media (min-width: 1024px) {
+  .careerfoundry-image {
+    width: 650px;
+  }
+
   .portfolio-modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 10000; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 10000;
+    /* Sit on top */
     overflow-x: hidden;
     overflow-y: hidden;
-    width: 900px; /* Full width */
-    height: auto; /* Full height */
-    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+    width: 900px;
+    /* Full width */
+    height: auto;
+    /* Full height */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
   }
 
   .portfolio-modal-content {
@@ -1758,6 +1817,7 @@ textarea.form-input::-webkit-resizer {
   #portfolio-modal-image {
     width: 100%;
   }
+
   /**
    * CUSTOM PROPERTY
    */
@@ -1858,6 +1918,10 @@ textarea.form-input::-webkit-resizer {
  */
 
 @media (min-width: 1250px) {
+  .careerfoundry-image {
+    width: 750px;
+  }
+
   /**
    * RESET
    */
@@ -1989,4 +2053,6 @@ textarea.form-input::-webkit-resizer {
   .timeline-text {
     max-width: 700px;
   }
+
+
 }
