--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,7 +258,8 @@ article.active {
 
 .article-title {
   position: relative;
-  padding-bottom: 7px;
+  padding-bottom: 10px;
+  font-style: italic;
 }
 
 .article-title::after {
@@ -418,7 +419,7 @@ main {
   visibility: visible;
 }
 
-.resume {
+.gold {
   color: var(--orange-yellow-crayola);
 }
 
@@ -508,12 +509,20 @@ main {
 
 .navbar-link:hover,
 .navbar-link:focus {
-  color: var(--light-gray-70);
+   color: var(--orange-yellow-crayola);
+
 }
 
 .navbar-link.active {
-  color: var(--orange-yellow-crayola);
+  color: var(--smoky-black);
 }
+
+
+.asset-link:hover,
+.asset-link:focus {
+  color: var(--white-1);
+}
+
 
 /*-----------------------------------*\
   #ABOUT
