--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,6 +284,7 @@ main {
   z-index: 1;
   margin-bottom: 15px;
   max-height: auto;
+  min-height: 50px;
   transition: var(--transition-2);
 }
 
@@ -294,6 +295,54 @@ main {
   justify-content: flex-start;
   align-items: center;
   gap: 6px;
+}
+
+.info_more-btn {
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  border-radius: 0 15px;
+  font-size: 13px;
+  color: var(--orange-yellow-crayola);
+  background: var(--eerie-black-1);
+  padding: 10px;
+  box-shadow: var(--shadow-2);
+  transition: var(--transition-1);
+  z-index: 1;
+}
+
+.info_more-btn::before {
+  content: "";
+  position: absolute;
+  inset: 1px;
+  border-radius: inherit;
+  background: var(--eerie-black-1);
+  transition: var(--transition-1);
+  z-index: -1;
+}
+
+.info_more-btn:hover,
+.info_more-btn:focus {
+  background: var(--orange-yellow-crayola);
+}
+
+.info_more-btn:hover::before,
+.info_more-btn:focus::before {
+  background: var(--eerie-black-1);
+}
+
+.info_more-btn:focus::after {
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  border-radius: 0 15px;
+  font-size: 13px;
+  color: var(--orange-yellow-crayola);
+  background: var(--eerie-black-1);
+  padding: 10px;
+  box-shadow: var(--shadow-2);
+  transition: var(--transition-1);
+  z-index: 1;
 }
 
 .avatar-box {
@@ -1381,7 +1430,6 @@ textarea.form-input::-webkit-resizer {
     max-height: max-content;
     height: 100%;
     margin-bottom: 0;
-    padding-top: 60px;
     z-index: 1;
   }
 
@@ -1390,7 +1438,7 @@ textarea.form-input::-webkit-resizer {
     border-radius: 20px;
     border: 2px solid var(--orange-yellow-crayola);
   }
-
+ 
   .info-content .name {
     white-space: nowrap;
     text-align: center;
