--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1335,6 +1335,7 @@ textarea.form-input::-webkit-resizer {
   .main-content {
     position: relative;
     width: max-content;
+    margin: auto;
   }
 
   .navbar {
