--- a/assets/game/Laser_Build1/TemplateData/style.css
+++ b/assets/game/Laser_Build1/TemplateData/style.css
@@ -5,17 +5,14 @@
 }
 
 .webgl-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
+    /* FULL viewport height */
+    width: 100%;
+    background-color: black;
 }
 
 html,
@@ -23,6 +20,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%;
     background-color: black;
 }
 
