--- a/assets/game/Laser_Build1/TemplateData/style.css
+++ b/assets/game/Laser_Build1/TemplateData/style.css
@@ -28,9 +28,7 @@ body {
 .aspect-wrapper {
     position: relative;
     width: 100%;
-    max-width: 100%;
-    aspect-ratio: 16 / 9;
-    /* modern responsive scaling */
+    height: 100%; /* NEW */
     background-color: black;
 }
 
