--- a/assets/game/Laser_Build1/TemplateData/style.css
+++ b/assets/game/Laser_Build1/TemplateData/style.css
@@ -24,11 +24,12 @@ body {
     background-color: black;
 }
 
-
 .aspect-wrapper {
     position: relative;
     width: 100%;
-    height: 100%; /* NEW */
+    max-width: 100%;
+    aspect-ratio: 9 / 16;
+    /* Portrait ratio */
     background-color: black;
 }
 
