--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,20 @@
   --transition-2: 0.5s ease-in-out;
 }
 
+
+.game-wrapper {
+  aspect-ratio: 9 / 16;
+  width: 100%;
+  max-height: 100vh;
+  background: black;
+}
+
+.game-frame {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+
 .avatar-box img {
   border-radius: 20px;
   border: 2px solid var(--orange-yellow-crayola);
@@ -972,6 +986,19 @@ textarea.form-input::-webkit-resizer {
 }
 
 @media (max-width: 449px) {
+
+  .game-wrapper {
+    position: relative;
+    left: -185px;
+    width: 720px;
+    aspect-ratio: 9 / 16;
+    max-height: 100vh;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    background: black;
+  }
+
   .careerfoundry-image {
     width: 276px;
   }
